app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

:root {
  --darkColor: white;
  --darkBackground: #2d3436;
  --darkPageBackground: #15171d;
  --lightColor: #2d3436;
  --lightBackground: #f5f6fa;
}

.network_link {
  color: inherit;
}

#chart-1 {
  height: 235px !important;
}

#chart-2, #chart-3, #chart-4, #chart-5 {
  height: 325px !important;
}

#chart-6 {
  height: 235px !important;
}

body {
  color: var(--lightColor) !important;
  background-color: var(--lightBackground);
  font-size: 9.5pt;
}

a {
  color: #00a8ff;
}

body.light {
  color: var(--lightColor) !important;
  background-color: var(--lightBackground);
  font-size: 9.5pt;
}

body.light a.plain_link {
  text-decoration: none;
  color: inherit;
}

body.light a.plain_link:hover {
  text-decoration: underline;
  color: inherit;
  font-style: italic;
}

body.light .pagination {
  font-size: 9pt;
  background-color: var(--lightBackground);
  margin: 0 auto;
}

body.light .pagination a {
  font-size: 9pt;
  color: inherit;
}

body.dark {
  color: var(--darkColor) !important;
  background-color: var(--darkBackground);
  font-size: 9.5pt;
}

body.dark a.plain_link {
  text-decoration: none;
  color: inherit;
}

body.dark a.plain_link:hover {
  text-decoration: underline;
  color: var(--darkColor);
  font-style: italic;
}

body.dark table {
  color: var(--darkColor);
}

body.dark .pagination {
  font-size: 9pt;
  background-color: var(--darkBackground) !important;
  margin: 0 auto;
}

body.dark .pagination a {
  font-size: 9pt;
  color: inherit;
  background-color: var(--darkPageBackground);
}

body.dark .pagination .active {
  background-color: #00a8ff;
}

.logo {
  font-size: 24pt;
}

.actions {
  padding: 0px 5px 0px 5px;
}

.container {
  width: 100%;
}

.navbar-links {
  margin-left: auto;
}

.navbar-links a {
  color: #ffffff;
}

.navbar-name {
  font-size: 14pt;
  vertical-align: middle;
  color: #ffffff;
  margin: 0;
}

.notice {
  color: #2980b9;
}

.logo {
  width: 40px;
  vertical-align: middle;
  padding-right: 5px;
}

h2.nav-float {
  font-size: 24px;
}

th.red {
  color: white !important;
  background-color: #F16E6A;
}

th {
  vertical-align: middle;
}

th a, a:hover {
  color: inherit;
  text-decoration: none;
}

table.rubric {
  width: 100%;
  margin: 0 auto;
}

table.rubric th,td {
  padding: 10px !important;
}

tr.top td,th {
  border-top: thin solid black;
}

tr.bottom td {
  border-bottom: thin solid black;
}

td.left {
  border-left: thin solid black;
}

th.left {
  border-left: thin solid black;
}

td.right {
  border-right: thin solid black;
}

th.right {
  border-right: thin solid black;
}

.td-10 {
  width: 10%;
}

.td-15 {
  width: 15%;
}

.bold {
  font-weight: bold;
}

.gray {
  background-color: #f5f6fa;
}

.token_name {
  font-size: 12pt !important;
}

.a {
  color: #00cec9;
  font-weight: bold;
}

.b {
  color: #6c5ce7;
  font-weight: bold;
}

.c {
  color: #a29bfe;
  font-weight: bold;
}

.d {
  color: #d63031;
  font-weight: bold;
}

a {
  text-decoration: none;
}

a.plain_link {
  text-decoration: none;
  color: inherit;
}

a.plain_link:hover {
  text-decoration: underline;
  color: inherit;
  font-style: italic;
}

.btn-header {
  border: 1px solid #ccc;
  border-radius: 10px 10px 0 0;
  background-color: inherit;
  padding: 8px;
  cursor: pointer;
  color: inherit;
  vertical-align: middle;
}

.btn-nav {
  border: 1px solid #ccc;
  border-radius: 5px;
  min-height: 35px;
  background-color: inherit;
  padding: 8px;
  cursor: pointer;
  color: inherit;
  vertical-align: middle;
}

.sort {
  position: absolute;
  margin-top: 6px;
  margin-left: 3px;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  color: #fffff;
}

.sort-desc {
  border-top: 8px solid #fff;
}

.sort-asc {
  border-bottom: 8px solid #fff;
}

.pagination {
  font-size: 9pt;
  background-color: #fff;
  margin: 0 auto;
}

.pagination a {
  font-size: 9pt;
  color: #000000;
}

.credentials {
  width: 50%;
  border: 1px solid #ccc;
  border-radius: 10px;
  padding: 20px;
  margin: 0 auto;
}

.credentials h3 {
  font-size: 15pt;
}

.info {
  width: 100%;
  border: 1px solid #ccc;
  border-radius: 0 0 10px 10px;
  padding: 10px 20px 10px 20px;
  margin: 0 auto;
}

.info h3 {
  font-size: 15pt;
}

.col {
  margin: 0px 10px 0px 10px !important;
}

.info-box {
  font-size: 10pt;
  padding: 10px 5px 10px 5px;
  border: 1px solid #ccc;
  border-radius: 10px;
}

.info-box h4 {
  font-size: 12pt;
}

.large-text {
  font-size: 16pt;
  font-weight: bold;
}

.medium-text {
  font-size: 1.1em;
  font-weight: bold;
}

.mai-oh-mai {
  font-size: 30pt;
}

.mai-oh-mai img {
  height: 35px;
}

.not-found {
  font-size: 80pt;
}

.not-found img {
  height: 90px;
  margin: -25px -20px 0 -20px;
}

.new {
  font-size: 8pt;
  color: #F16E6A;
  border: 1px solid #F16E6A;
  padding: 2px;
}

